css/main.css
body {
  background-color: #daf0ff;
  text-align: left;
  color: #222;
}

.color-wrapper {
  background-color: #fff;
  min-height: 100vh;
}

.container {
  margin-left: 5em;
}

h1 {
  font-family: 'Cabin', sans-serif;
  font-size: 2.9em;
  font-weight: 400;
  margin-top: 8rem;
  letter-spacing: .035em;
  padding-bottom: 4rem;
}

h2 {
  margin-top: 4rem;
  margin-bottom: -1rem;
  font-family: 'Cabin', sans-serif;
  font-size: 2em;
  font-weight: 300;
}

h2.subhead {
  margin-top: -4rem;
  margin-bottom: 5rem;

}

hr {
  border-top: 2px solid #222;
  max-width: 50px;
  margin: 0;
}

p {
  font-size: 1.3em;
  letter-spacing: .03em;
  font-family: 'Lora', serif;
  font-weight: 300;
  max-width: 27em;
  margin: 1.5rem 0;
}

p:last-of-type {
  margin-bottom: 2rem;
}

a:link    { color: #e33c1c }
a:visited { color: #e33c1c }
a:hover   { color: #e33c1c }

::selection {
    background-color: #e7563a;
    color: #fff;
}

::-moz-selection {
    background-color: #e7563a;
    color: #fff;
}

::-o-selection {
    background-color: #e7563a;
    color: #fff;
}

::-ms-selection {
    background-color: #e7563a;
    color: #fff;
}

::-webkit-selection {
    background-color: #e7563a;
    color: #fff;
}

@media (max-width: 600px) {
  .container {
    margin-left: 0;
  }

  h1 {
    font-size: 2.4em;
    margin-top: 5rem;
    letter-spacing: .02em;
    padding-bottom: 2rem;
  }

  hr {
    border-top: 1.4px solid #222;
    max-width: 50px;
  }

  p {
    font-size: 1.2em;
    letter-spacing: .02em;
  }

  p:last-of-type {
    margin-top: 3rem;
    margin-bottom: 1rem;
  }
}

